--- a/index.html
+++ b/index.html
@@ -3,42 +3,104 @@
 <head>
   <meta charset="UTF-8">
   <title>Mlion</title>
+  <!-- Stylesheets-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <!--Separate-->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+  <!--Favicon-->
   <link rel="icon" href="css/favicon.ico">
 </head>
+
 <body>
+  <!-- nav bar -->
+  <nav class="navbar navbar-expand-lg navbar-light h-auto" style = "background-color: powderblue;">
+    <a class="navbar-brand" href="https://m1ion.github.io/">&emsp;Mlion</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="">Link 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link 3</a>
+        </li>
+    </ul>
+  </div>
+</nav>
+
 <div class="top-container">
 <center>
-      <h1 id="heading">Mlion</h1>
+      <h1 id="heading"><strong>Mlion</strong></h1>
       <hr id="first-rule">
       <p id="paragraph-one">Turzhanov, B., Dairov, S., Shukurov, A., & Zhumakhanova, A.</p>
 </center>
 </div>
-<div class="middle-container">
+
+<!-- container-fluid -->
+<section class="container-fluid">
   <h1 class="Mlion">Profile</h1><br>
   <hr id="Profile">
   <p id="Team">We are a close-knit team</p>
-  <table>
-    <tr>
-      <td id="f-table">
-        <h1 style="color: #20B2AA; font-family: cursive;">About us</h1><br>
-        <br><p class="paragraph">
-          This is the personal website of our team called Mlion.<br>
-          <br>
-          The name comes from the combination of<br>
-          <br>
-          two words - "million” and "lion". We are AITU students<br>
-          <br>
-          who are taking WEB Technologies 1 (Front End).<br>
-          <br>
-          Currently, we are learning HTML and CSS.</p></td>
-      <td id="group-img"><img src="Mlion.jpeg" height="400" width="500"></td>
-  </table>
-    <br>
+  
+  <div class = "container">
+  <div class = "row">
+    <div class = "col-lg-6 m-auto">
+      <h1 style="color: #20B2AA; font-family: cursive; text-align: center;">About us</h1><br>
+      <br><p class="paragraph">
+        This is the personal website of our team called Mlion.<br>
+        The name comes from the combination of<br>
+        two words - "million” and "lion". We are AITU students<br>
+        who are taking WEB Technologies 1 (Front End).<br>
+        Currently, we are learning HTML and CSS.</p>  
     </div>
-    <div class="smiddle-container">
-    <h1 class="Members">Members</h1>
-    <hr id="sec-rule"><br>
+    <div class = "col-lg-6">
+      <center>
+      <img src="Mlion.jpeg" height="400" width="500">
+    </center>
+    </div>
+  </div>
+  </div>
+</section>
+
+<!-- 3 container -->
+<section class="container-fluid" style="background: cornsilk;">
+
+  <h1 id="heading3">Members</h1>
+  <hr id="sec-rule"><br>
+  <center>
+  <div class = "row row-cols-1 row-cols-sm-2 row-cols-md-4">
+    <div class = "member-box col-md-3">
+      <img src="beka.jpeg" height="230" width="230"><br>
+      <p class="member-name"><a href="Bektas.html">Bektas</a></p>
+    </div>
+    <div class = "member-box col-md-3">
+      <img src="sgz.jpeg" height="230" width="230"><br>
+      <p class="member-name"><a href="Sultangazy.html">Sultangazy</a></p>
+    </div>
+    <div class = "member-box col-md-3">
+      <img src="Altynay1.jpeg" height="230" width="230"><br>
+      <p class="member-name"><a href="Altynay.html">Altynay</a></p>
+    </div>
+    <div class = "member-box col-md-3">
+      <img src="Ansar.jpeg" height="230" width="230"><br>
+      <p class="member-name"><a href="Ansar.html">Ansar</a></p>
+    </div>
+  </div>
+</center>
+</section>
+
+<!-- How it was before
+  <div class="smiddle-container">
+  <h1 id="heading3">Members</h1>
+  <hr id="sec-rule"><br>
     <table>
       <tr>
         <td class="s-table"><img src="beka.jpeg" height="230" width="230"></td>
@@ -53,15 +115,36 @@
         <td class="s-table"><p class="b-table"><a href="Ansar.html">Ansar</a></p></td>
       </tr>
     </table>
-<!--<ul>
-      <li><a href="Bektas.html">Bektas</a></li>
-      <li><a href="Ansar.html">Ansar</a></li>
-      <li><a href="Altynay.html">Altynay</a></li>
-      <li><a href="Sultangazy.html">Sultangazy</a></li>
-    </ul> -->
-</div>
-<div class="bottom-container">
+</div> -->
+
+
+<!-- Bottom container -->
+<section class="container-fluid" style="background: gray">
+  <h1 id="Contact">Contact</h1>
+  <center>
+    <div class="container-fluid">
+      <div class="row justify-content-md-center">
+        <div class="last-table col col-lg-4">
+          <span><img src="inst.png" width="32" height="32"></span>
+          <span><p class = "Space"><a href="https://instagram.com/sixxnai?utm_medium=copy_link">Instagram</a></p></span>
+        </div>
+        <div class="last-table col col-lg-4">
+          <span><img src="Telegram.png" width="32" height="32"></span>
+          <span><p class = "Space"></p><a href="https://t.me/bekatop1gg">Telegram</a></p></span>
+        </div>
+        <div class="last-table col col-lg-4">
+          <span><img src="whatsup.png" width="32" height="32"></span>
+          <span><p class = "Space"></p><a href="https://wa.me/+77778187401">Whatsapp</a></p></span>
+        </div>
+      </div>
+  </center>
+</section>
+
+
+<!-- How it was before
+   <div class="bottom-container">
 <h1 id="Contact">Contact</h1>
+
 <table class = "last-table">
   <tr>
     <td class="contact"><img src="inst.png" width="32" height="32"></td>
@@ -72,7 +155,8 @@
     <td><a href="https://wa.me/+77778187401">Whatsapp</a></td>
   </tr>
 </table>
-</div>
 
+</div>
+-->
 </body>
 </html>
