--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
 
 <body>
   <!-- nav bar -->
-  <nav class="navbar navbar-expand-lg navbar-light h-auto" style = "background-color: powderblue;">
-    <a class="navbar-brand" href="https://m1ion.github.io/">&emsp;Mlion</a>
+  <nav class="navbar navbar-expand-sm navbar-light h-auto" style = "background-color: powderblue;">
+    <a class="navbar-brand" href="https://m1ion.github.io/">&emsp;Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>
     </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto" >
         <li class="nav-item">
-          <a class="nav-link" href="">Link 1</a>
+          <a class="nav-link" href="Bektas.html">Bektas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Link 2</a>
+          <a class="nav-link" href="Sultangazy.html">Sultangazy</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Link 3</a>
+          <a class="nav-link" href="Altynay.html">Altynay</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Ansar.html">Ansar</a>
         </li>
     </ul>
   </div>
