--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
   <!--Favicon-->
   <link rel="icon" href="css/favicon.ico">
+  <!--Font Awesome-->
+  <script src="https://kit.fontawesome.com/38b1af0009.js" crossorigin="anonymous"></script>
+  <!--Font Family-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Zen+Kaku+Gothic+Antique:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <!-- nav bar -->
   <nav class="navbar navbar-expand-sm navbar-light h-auto" style = "background-color: powderblue;">
-    <a class="navbar-brand" href="https://m1ion.github.io/">&emsp;Home</a>
+    <a class="navbar-brand" href="https://m1ion.github.io/" style="color:black">&emsp;<i class="fa-solid fa-house-chimney"></i><strong> Home</strong></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -55,7 +61,7 @@
   
   <div class = "container">
   <div class = "row">
-    <div class = "col-lg-6 m-auto">
+    <div class = "col-lg-6">
       <h1 style="color: #20B2AA; font-family: cursive; text-align: center;">About us</h1><br>
       <br><p class="paragraph">
         This is the personal website of our team called Mlion.<br>
@@ -65,8 +71,8 @@
         Currently, we are learning HTML and CSS.</p>  
     </div>
     <div class = "col-lg-6">
-      <center>
-      <img src="Mlion.jpeg" height="400" width="500">
+    <center>
+    <p><img id="teamPhoto"src="Mlion.jpeg"></p>
     </center>
     </div>
   </div>
@@ -75,8 +81,72 @@
 
 <!-- 3 container -->
 <section class="container-fluid" style="background: cornsilk;">
-
   <h1 id="heading3">Members</h1>
+  <hr id="sec-rule"><br>
+<!-- card example -->
+<div class="row" style="padding-bottom: 3em">
+  <div class="col-6 col-md-3">
+    <div class="card border-0 mb-3">
+      <img src="beka.jpeg">
+      <div class="card-body">
+        <h5 class="card-title">Turzhanov Bektas</h5>
+        <ul class="res-items list-group list-group-flush">
+          <li class="responsibilities list-group-item">Tech Lead</li>
+          <li class="responsibilities list-group-item">User interface designer</li>
+        </ul>
+        <div class="card-body">
+        <a href="Bektas.html" class="btn btn-info"><i class="fa-solid fa-shield"></i> Go to personal page</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6 col-md-3">
+    <div class="card border-0 mb-3">
+      <img src="sgz.jpeg">
+      <div class="card-body">
+        <h5 class="card-title">Dairov Sultangazy</h5>
+        <ul class="res-items list-group list-group-flush">
+          <li class="responsibilities list-group-item">Team leader</li>
+          <li class="responsibilities list-group-item">Navigation bar developer</li>
+        </ul>
+        <div class="card-body">
+        <a href="Sultangazy.html" class="btn btn-info"><i class="fa-solid fa-chess-king"></i> Go to personal page</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6 col-md-3">
+    <div class="card border-0 mb-3">
+      <img src="Altynay1.jpeg">
+      <div class="card-body">
+        <h5 class="card-title">Zhumakhanova Altynay</h5>
+        <ul class="res-items list-group list-group-flush">
+          <li class="responsibilities list-group-item">Chief designer</li>
+          <li class="responsibilities list-group-item">HTML and CSS developer</li>
+        </ul>
+        <div class="card-body">
+        <a href="Altynay.html" class="btn btn-info"><i class="fa-solid fa-splotch"></i> Go to personal page</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6 col-md-3">
+    <div class="card border-0 mb-3">
+      <img src="Ansar.jpeg">
+      <div class="card-body">
+        <h5 class="card-title">Shukurov Ansar</h5>
+        <ul class="res-items list-group list-group-flush">
+          <li class="responsibilities list-group-item">Personal page programmer</li>
+          <li class="responsibilities list-group-item">Button programmer</li>
+        </ul>
+        <div class="card-body">
+        <a href="Ansar.html" class="btn btn-info"><i class="fa-solid fa-headset"></i> Go to personal page</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  <!-- <h1 id="heading3">Members</h1>
   <hr id="sec-rule"><br>
   <center>
   <div class = "row row-cols-1 row-cols-sm-2 row-cols-md-4">
@@ -97,7 +167,7 @@
       <p class="member-name"><a href="Ansar.html">Ansar</a></p>
     </div>
   </div>
-</center>
+</center> -->
 </section>
 
 <!-- How it was before
@@ -128,15 +198,15 @@
     <div class="container-fluid">
       <div class="row justify-content-md-center">
         <div class="last-table col col-lg-4">
-          <span><img src="inst.png" width="32" height="32"></span>
-          <span><p class = "Space"><a href="https://instagram.com/sixxnai?utm_medium=copy_link">Instagram</a></p></span>
+          <span><img class = "contact-img" src="inst.png" width="32" height="32"></span>
+          <span><p class = "Space" style="padding-top: 15"><a href="https://instagram.com/sixxnai?utm_medium=copy_link">Instagram</a></p></span>
         </div>
         <div class="last-table col col-lg-4">
-          <span><img src="Telegram.png" width="32" height="32"></span>
+          <span><img class = "contact-img" src="Telegram.png" width="32" height="32"></span>
           <span><p class = "Space"></p><a href="https://t.me/bekatop1gg">Telegram</a></p></span>
         </div>
         <div class="last-table col col-lg-4">
-          <span><img src="whatsup.png" width="32" height="32"></span>
+          <span><img class = "contact-img" src="whatsup.png" width="32" height="32"></span>
           <span><p class = "Space"></p><a href="https://wa.me/+77778187401">Whatsapp</a></p></span>
         </div>
       </div>
@@ -161,5 +231,6 @@
 
 </div>
 -->
+
 </body>
 </html>
