--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         Currently, we are learning HTML and CSS.</p>  
     </div>
     <div class = "col-lg-6">
-    <p><img id="teamPhoto"src="img/Mlion.jpeg"></p>
+      <center><p><img id="teamPhoto"src="img/Mlion.jpeg"></p></center>
     </div>
   </div>
   </div>
