--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </nav>
 <!-- top-container -->
 <section class="container-fluid" style="
-  height: 100vh; 
+  height: 37rem; 
   width: 100%;
   background-image:url('img/overlay.png'),url('img/back.jpg'); 
   background-position: center; 
