--- a/play.html
+++ b/play.html
@@ -45,7 +45,7 @@
   </div>
 </nav>
 <section class="container-fluid" style="
-height: 100vh; 
+height: 37rem; 
 width: 100%; 
 background-image:url('img/overlay.png'),url('img/playPage-bg.jpg'); 
 background-position: center; 
