--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src = "img-sound/mam.jpeg" style="background-color: #EFEFEF;background-position: center; background-size: cover; width: 100%; height: 100%;">
     </div>
     <div class="col-lg-6">
-        <img src = "img-sound/mam2.jpeg" style="background-color: #EFEFEF;background-position: center; background-size: cover; width: 100%; height: 100%;">
+        <img src = "img-sound/mam2.jpeg" style="padding-top:2em; background-color: #EFEFEF;background-position: center; background-size: cover; width: 100%; height: 100%;">
     </div>
 </div>
 </section>
