--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </div>
 <section class="container-fluid" style="background-color: #EFEFEF;">
 <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-6" style="padding:1em;">
         <img src = "img-sound/mam.jpeg" style="background-color: #EFEFEF;background-position: center; background-size: cover; width: 100%; height: 100%;">
     </div>
-    <div class="col-lg-6">
-        <img src = "img-sound/mam2.jpeg" style="padding-top:2em; background-color: #EFEFEF;background-position: center; background-size: cover; width: 100%; height: 100%;">
+    <div class="col-lg-6" style="padding:1em;">
+        <img src = "img-sound/mam2.jpeg" style="background-color: #EFEFEF;background-position: center; background-size: cover; width: 100%; height: 100%;">
     </div>
 </div>
 </section>
